--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -1,9 +1,99 @@
-.container-footer{
-    background-color: rgb(220, 225, 235);
+.container-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    bottom: 0;
     width: 100%;
-    height: 500px;
+    padding: 15px;
+    background-color: #0053E2;
+
+}
+.footer-navbar{
+    margin-top: 20px;
+display: flex;
+align-items: center;
+justify-content: space-evenly;
+gap: 10px;
+}
+.footer-navbar li{
+    color: white;
+    list-style: none;
+    text-decoration: none;
+    font-weight: 200;
+    font-size: 15px;
+}
+.footer-heading {
+    text-align: center;
     margin-top: 1rem;
-    border-top-left-radius: 8%;
-    border-top-right-radius: 8%;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+}
+
+.footer-contact-container {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    
+    align-items: center;
+    justify-content: center;
+    margin-left: 50px;
+    margin-top: 1rem;
+
+}
+
+.footer-contact-item {
+    display: flex;
+    align-items: center;
+    margin: 0.5rem 0;
+}
+
+.footer-icon {
+    width: 24px;
+    height: 24px;
+    margin-right: 0.5rem;
+}
+
+.footer-link {
+    font-size: 1rem;
+    color: white;
+    text-decoration: none;
+}
+
+.footer-copy {
+    margin-top: 1rem;
+    font-size: 1rem;
+    color: white
+}
+
+@media (max-width: 600px) {
+    .footer-title {
+        font-size: 1.5rem;
+    }
+
+    .footer-heading {
+        font-size: 1rem;
+    }
+
+    .footer-contact-item {
+        font-size: 0.9rem;
+    }
+
+    .footer-link {
+        font-size: 0.9rem;
+    }
+}
+@media (max-width: 400px) {
+    .footer-contact-container {
+        grid-template-columns: 1fr;
+        margin-left: 0;
+        text-align: center;
+    }
+}
+@media (min-width: 768px) {
+    .footer-icon {
+        width: 32px;
+        height: 32px;
+    }
 }
