--- a/src/Styles/login.css
+++ b/src/Styles/login.css
@@ -1,87 +1,112 @@
-.container {
-    margin-top: 3rem;
+
+.login-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-    width: 100%;
-}
-
-.image {
-    justify-content: center;
     align-items: center;
-    display: flex;
-    width: 100%;
+    padding-left: 20px;
+    padding-right: 10px;
+    width: 100vw;
+    height: 100vh;
 }
 
-.image img {
-    will-change: transform, opacity;
-    transform: translateZ(0);
-    height: 40vh;
-    max-width: 100%;
+.login-image{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.login-image img{
+    width: 100%;
+    height: 250px;
     object-fit: contain;
 }
 
 h1 {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
+    text-align: start;
+    font-size: 20px;
 }
 
 .input {
     width: 100%;
+    max-width: 320px;
 }
 
 .input-container {
-    width: 100%;
     display: flex;
+    justify-content: center;
+    flex-direction: column;
     margin-bottom: 1rem;
+}
+.input-container p{
+    color: red;
+    font-size: 12;
+    font-weight: 200;
+    margin-top: 5px;
+}
+.loginButton {
+    margin-top: 30px;
+    border: none;
+    background-color: #0056b3;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    width: 100%;
+    padding: 10px 20px;
+    border-radius: 15px;
 }
 
 .input-container input {
-    display: block;
+    width: 100%;
+    padding: 12px;
     border: none;
     outline: none;
     border-bottom: 2px solid black;
-    padding: 10px;
-    width: 100%;
-    margin-right: 2rem;
+    font-size: 14px;
     color: black;
 }
-
-.input-container input::placeholder {
-    color: gray;
-    transition: 0.3s;
-}
-
-.button {
-    width: 100%;
-    justify-content: center;
+.a {
     display: flex;
-    align-items: center;
-    margin-top: 2rem;
-}
-
-button {
-    border-color: none;
-    border: none;
-    background-color: #2D128A;
-    width: 80%;
-    margin-right: 1.5rem;
-    color: white;
-    font-size: 16px;
-    border-radius: 3rem;
-    padding: 1rem;
-}
-.a{
-    width: 100%;
-    display: flex;
-    align-items: center;
+    align-items: flex-start;
+    gap: 2rem;
+    margin-top: 5px;
+    margin-bottom: 5px;
     justify-content: space-between;
+    width: 100%;
 }
-.a a{
-    text-decoration: none;
-    font-size: 14px;
-    color: #37208e;
+
+.register-color {
+    color: #0056b3;
+    font-weight: bold;
+    cursor: pointer;
 }
-p{
-    font-size: 12;
+
+.forgotPassword-color {
+    color: red;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
+button:hover {
+    background-color: #1f0d6b;
+}
+
+/* Responsive for smaller phones */
+@media screen and (max-width: 360px) {
+
+    h1 {
+        font-size: 18px;
+    }
+
+    .input-container input {
+        padding: 10px;
+        font-size: 12px;
+    }
+
+    .a {
+        font-size: 12px;
+    }
 }
